add setting activity

--- a/app/src/main/res/menu/menu_secret_app_main.xml
+++ b/app/src/main/res/menu/menu_secret_app_main.xml
@@ -7,4 +7,24 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/contact_author"
+        android:orderInCategory="100"
+        android:title="@string/contact_author"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/share_app"
+        android:orderInCategory="100"
+        android:title="@string/share_app"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/support_advise"
+        android:orderInCategory="100"
+        android:title="@string/support_advise"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/social_app"
+        android:orderInCategory="100"
+        android:title="@string/social_app"
+        app:showAsAction="never" />
 </menu>
