--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,15 @@
         <item name="android:drawablePadding">10dp</item>
     </style>
 
+    <style name="SettingsTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="android:titleTextStyle">@style/ActionBarTitle</item>
+    </style>
+
+    <style name="ActionBarTitle" parent="Base.TextAppearance.AppCompat.Title">
+        <item name="android:textColor">@android:color/holo_blue_bright</item>
+        <item name="android:textSize">30sp</item>
+    </style>
 </resources>
