add some activity for the project
add some activity for the project,like as
settngs/shareapp/disableapp/feedback and so on

--- a/app/src/main/res/layout/activity_secret_app_main.xml
+++ b/app/src/main/res/layout/activity_secret_app_main.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/fake" />
+            android:src="@drawable/me" />
 
         <com.github.mzule.fantasyslide.SideBar
             android:id="@+id/leftSideBar"
@@ -34,6 +34,7 @@
                 android:orientation="vertical">
 
                 <santi.secretapp.widget.CircleImageView
+                    android:id="@+id/user_image"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
                     android:layout_margin="10dp"
@@ -42,6 +43,7 @@
                     app:civ_border_width="2dp" />
 
                 <TextView
+                    android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/user_name"
@@ -50,6 +52,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/disabled_app"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_hide_app"
                 android:text="冷藏室"
@@ -57,6 +60,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/eyes_safeguard"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_protect_eye"
                 android:text="护眼模式"
@@ -64,6 +68,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/voice_tts"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_message_tts"
                 android:text="语音播报"
@@ -71,6 +76,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/share"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/toolbar_share"
                 android:text="分享"
@@ -78,6 +84,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/settings"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/toolbar_settings"
                 android:text="设置"
