--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,10 +6,18 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:itemBackground">@color/colorPrimaryDark</item>
     </style>
 
     <style name="UniversalTheme" parent="AppTheme">
         <item name="android:windowIsTranslucent">true</item>
+    </style>
+
+    <style name="ActionBarTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:windowActionBar">true</item>
+        <item name="android:titleTextColor">#FFFFFF</item>
     </style>
 
     <style name="MenuText">
@@ -22,15 +30,4 @@
         <item name="android:drawablePadding">10dp</item>
     </style>
 
-    <style name="SettingsTheme" parent="AppTheme">
-        <!-- Customize your theme here. -->
-        <item name="android:windowNoTitle">false</item>
-        <item name="android:windowActionBar">true</item>
-        <item name="android:titleTextStyle">@style/ActionBarTitle</item>
-    </style>
-
-    <style name="ActionBarTitle" parent="Base.TextAppearance.AppCompat.Title">
-        <item name="android:textColor">@android:color/holo_blue_bright</item>
-        <item name="android:textSize">30sp</item>
-    </style>
 </resources>
