--- a/app/src/main/res/layout/activity_disabled_app.xml
+++ b/app/src/main/res/layout/activity_disabled_app.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/disabled_app_iamge"
+            android:id="@+id/empty_disabled_app_iamge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -36,6 +36,24 @@
             android:background="@drawable/btn_start_selector"
             android:text="@string/text_start_disabled_app"
             android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/disabled_app_Layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <GridView
+            android:id="@+id/gridView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            android:paddingTop="15dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:numColumns="4" >
+        </GridView>
     </LinearLayout>
 
 </LinearLayout>
