add the disable app function
add the disable app function

--- a/app/src/main/res/layout/activity_secret_app_main.xml
+++ b/app/src/main/res/layout/activity_secret_app_main.xml
@@ -55,7 +55,7 @@
                 android:id="@+id/disabled_app"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_hide_app"
-                android:text="冷藏室"
+                android:text="@string/hide_apps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -63,7 +63,7 @@
                 android:id="@+id/eyes_safeguard"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_protect_eye"
-                android:text="护眼模式"
+                android:text="@string/protect_eye"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -71,7 +71,7 @@
                 android:id="@+id/voice_tts"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/ic_menu_message_tts"
-                android:text="语音播报"
+                android:text="@string/message_tts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -79,7 +79,7 @@
                 android:id="@+id/share"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/toolbar_share"
-                android:text="分享"
+                android:text="@string/share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -87,7 +87,7 @@
                 android:id="@+id/settings"
                 style="@style/MenuText"
                 android:drawableLeft="@drawable/toolbar_settings"
-                android:text="设置"
+                android:text="@string/settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </com.github.mzule.fantasyslide.SideBar>
